fix workText alignment

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ ul {
 	width: 350px;
 	height: 0px;
 	padding: 20px 20px 20px 0px;
-	bottom: 0;
+	bottom: -5px;
 	position: absolute;
 	list-style: none;
 	opacity: 0;
@@ -326,7 +326,7 @@ i {
 	width: 350px;
 	height: 0px;
 	padding: 20px 0px 20px 20px;
-	bottom: 0;
+	bottom: -5px;
 	right: 0;
 	position: absolute;
 	list-style: none;
@@ -451,5 +451,14 @@ i {
 	}
 	.modal-content i {
 		padding-right: 10px;
+	}
+	#textbox1 {
+		padding-left: 10px;
+	}
+	.textBoxChild {
+		padding-left: 10px;
+	}
+	.work > .workText {
+		padding-left: 5px;
 	}
 }
